--- a/package.json
+++ b/package.json
@@ -49,12 +49,14 @@
     "embla-carousel-react": "^8.5.2",
     "eslint": "9.22.0",
     "eslint-config-next": "15.2.2",
+    "framer-motion": "^12.5.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.479.0",
     "next": "^15.2.2",
     "next-themes": "^0.4.6",
     "postcss": "8.5.3",
     "react": "19.0.0",
+    "react-countup": "^6.5.3",
     "react-day-picker": "^9.6.1",
     "react-dom": "19.0.0",
     "react-hook-form": "^7.54.2",
