--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.16"
+    "@tailwindcss/typography": "^0.5.16",
+    "@types/unist": "^3.0.3"
   }
 }
